# AIxcel

./: .gitignore  API.md  Features.md  IMPROVEMENTS_SUMMARY.md  README.md  TESTING.md  start-services.sh  start.bat  start.sh  test_api.sh
backend/: .gitignore  Cargo.toml  README.md  TEST_README.md  benchmark.sh  complete_test_suite.sh  extreme_column_test.sh  extreme_test.sh  mega_benchmark.sh  quick_benchmark.sh  run_tests.sh  test_api.sh
backend/src/: main.rs
frontend/: .env.example  .gitignore  README_LOCAL.md
frontend/app/: home.module.css  layout.tsx  page.module.css  page.module.css.backup  page.tsx
frontend/app/api/cells/: route.ts
frontend/app/api/cells/bulk/: route.ts
frontend/app/api/cells/clear/: route.ts
frontend/app/api/evaluate/: route.ts
frontend/app/api/sheets/: route.ts
frontend/app/api/sheets/[name]/: route.ts
frontend/app/sheets/[sheet]/: page.tsx
