[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-web-actors = "4"
actix = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
evalexpr = "12"
regex = "1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
actix-rt = "2"
